# cnn-assignment

./: .gitignore  README.md  flake.nix  pyproject.toml
report/: main.typ  template.typ
scripts/: fetch_font.ts  gen_img.tsx  main.ts
src/: main.py  model.py  train.py  validate.py
