[project]
name = "cnn-assignment"
version = "0.1.0"
description = "アルファベットを認識するCNN"
dependencies = [
  "torch>=2.0.1",
  "torchvision>=0.15.2",
  "numpy>=1.24.4",
  "matplotlib>=3.7.3",
  "opencv-python>=4.8.0.76",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python src/main.py"
train = "python -m src.bin.train"
predict = "python -m src.bin.predict"
