[project]
name = "cnn-assignment"
version = "0.1.0"
description = "アルファベットを認識するCNN"
dependencies = ["torch>=2.0.1", "torchvision>=0.15.2", "numpy>=1.24.4"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
cnn = "python -m src.main"
train = "python -m src.main --onlyTrain"
validate = "python -m src.main --onlyValidate"
